src/test/deca/syntax/valid/parser/oracle/inequality_expr_sixth_deriv.deca
{
  -"Moon !" instanceof instance;
  5 instanceof int;
  (A+2) instanceof A;
  readInt() instanceof B;
  readFloat() instanceof Float;
}
