src/test/deca/syntax/invalid/parser/oracle/method_asm_typo.deca
class A { a a (a a) asn (""); }